# funkcyjne

./: Dockerfile
Zad1/: main.scala  zad3.0.json  zad4.0.json  zad4.5.json  zad5.0.json
Zad10/: commands.txt
Zad10/HS/: Dockerfile  Main.hs  zad10-Haskell.cabal
Zad10/JS/: package-lock.json  package.json
Zad10/JS/src/functions/: function1.js  function2.js  function3.js
Zad2/: dockerHUB.txt
Zad3/: main.scala  zad.3.0.json  zad.3.5.json  zad.4.0.json  zad.4.5.json  zad.5.0.json
Zad4/: DONE-3.0,3.5,5.0.txt  build.sbt  main.scala  zad.3.0-bad.json  zad.3.0.json  zad.3.5.json  zad.4.0-null.json  zad.4.5.json  zad.5.0.json  zad40.json
Zad5/: main.scala  zad.3.0.json  zad.3.5.json  zad.4.0.json  zad.4.5.json
Zad6/: Main.hs  build.cabal  zad3.5.json
Zad6/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Zad7/: Main.hs  build.cabal
Zad7/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
Zad8/: Main.hs  build.cabal  zad.3.0.json  zad.3.5.json  zad.4.0.json  zad.4.5.json  zad.5.0.json
Zad8/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Zad9/: package-lock.json  package.json  server.js  worker.js  zad.3.0.json  zad.3.5.json  zad.4.0.json  zad.4.5.json  zad.5.0.json
