cabal-version:       2.4
name:                zad6
version:             0.1.0.0
build-type:          Simple

executable zad6
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.13 && < 5
                     , scotty
                     , aeson
                     , text
                     , bytestring
                     , containers
